# p4pythonic

./: jase_scratchpad.py  main.py  p4 testing.ipynb  pyproject.toml  requirements.txt  scratchpad.py
src/: usage_tests.ipynb
src/p4pythonic/: __init__.py  main.py
